[package]
name = "play-leveldb"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
# leveldb = {git="https://github.com/skade/leveldb"}
leveldb = {git="https://github.com/cassc/leveldb.git", branch="allow-impl-database-key"}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tokio = { version = "1.17.0", features = ["full"] }
